# Kulyk_goit-homework-07

./: README.md  kulyk_goit_homework_07-0.0.22-py3-none-any.whl
version_11_04_23/clean_folder/: pyproject.toml
version_11_04_23/clean_folder/clean_folder/: __init__.py  main.py
